--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -125,7 +125,7 @@ jobs:
         cache: 'npm'
 
     - name: 📦 Install Dependencies
-      run: npm ci
+      run: npm install
 
     - name: 🏗️ Build for Staging
       run: npm run build:staging
@@ -219,7 +219,7 @@ jobs:
         cache: 'npm'
 
     - name: 📦 Install Dependencies
-      run: npm ci
+      run: npm install
 
     - name: 🏗️ Build for Production
       run: npm run build
