--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -201,9 +201,12 @@ jobs:
       run: |
         npm run serve &
         sleep 10
-        - name: Healthcheck preview server
-          run: |
-            curl -f http://localhost:5000 || exit 1
+
+    - name: Healthcheck preview server
+      run: |
+        curl -f http://localhost:5000 || exit 1
+
+    - name: ♿ Accessibility Test
       run: |
         npx @axe-core/cli http://localhost:5000 --exit
       continue-on-error: true
