Fix: Production build logger import hatası düzeltildi

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
     "serve": "vite preview --port 5000 --strictPort",
     "serve:staging": "vite preview --port 5000 --strictPort",
-    "preview": "serve -s dist -l $PORT",
-    "start": "serve -s dist -l $PORT",
+    "preview": "serve -s dist -l 5000",
+    "start": "serve -s dist -l 5000",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -25,6 +25,8 @@
     "lint:prod": "NODE_ENV=production eslint .",
     "env:check": "node scripts/check-environment.js",
     "env:validate": "node scripts/validate-environment.js",
+    "security:port-check": "powershell -ExecutionPolicy Bypass -File scripts/port-security-check.ps1",
+    "security:port-watch": "powershell -ExecutionPolicy Bypass -File scripts/port-security-check.ps1 -watch",
     "docker:build": "node scripts/docker-manager.js build",
     "docker:build:dev": "node scripts/docker-manager.js build:dev",
     "docker:run": "node scripts/docker-manager.js run",
