--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.0.3",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.14",
@@ -60,12 +65,8 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
+    "terser": "^5.43.1",
     "typescript": "^5.6.3",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
     "vite": "^7.1.3",
     "vite-bundle-analyzer": "^1.2.1",
     "vitest": "^3.2.4",
