Production ready: All systems optimized and tested for Railway deployment

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,14 @@ VITE_API_BASE_URL="http://localhost:3001/api"
 VITE_API_TIMEOUT="30000"
 VITE_API_RETRY_ATTEMPTS="3"
 
+# Backend Configuration
+NODE_ENV="development"
+PORT="3001"
+DATABASE_URL="postgresql://username:password@localhost:5432/kirilmazlar"
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_EXPIRES_IN="24h"
+CORS_ORIGIN="http://localhost:5000"
+
 # Feature Flags
 VITE_ENABLE_CONSOLE_LOGS="true"
 VITE_ENABLE_DEVELOPER_TOOLS="true"
@@ -32,7 +40,7 @@ VITE_ENABLE_HTTPS="false"
 VITE_SESSION_TIMEOUT="3600000"
 
 # Storage Configuration
-VITE_STORAGE_TYPE="localStorage"
+VITE_STORAGE_TYPE="api"
 VITE_STORAGE_PREFIX="kirilmazlar_dev_"
 VITE_STORAGE_ENCRYPT="false"
 
