--- a/.env.production
+++ b/.env.production
@@ -16,9 +16,10 @@ VITE_API_BASE_URL="$RAILWAY_STATIC_URL/api/v1"
 VITE_API_TIMEOUT="15000"
 VITE_API_RETRY_ATTEMPTS="2"
 
-# Supabase Configuration (TO BE CONFIGURED)
-VITE_SUPABASE_URL="https://your-project.supabase.co"
-VITE_SUPABASE_ANON_KEY="your_supabase_anon_key"
+# API Configuration (Production)
+VITE_API_BASE_URL="$RAILWAY_STATIC_URL/api"
+VITE_API_TIMEOUT="15000"
+VITE_API_RETRY_ATTEMPTS="2"
 
 # Feature Flags (Production optimized)
 VITE_ENABLE_CONSOLE_LOGS="false"
