--- a/package.json
+++ b/package.json
@@ -16,15 +16,28 @@
     "serve": "vite preview --port 5000 --strictPort",
     "serve:staging": "vite preview --port 5000 --strictPort",
     "preview": "serve -s dist -l 5000",
-    "start": "serve -s dist -l 5000",
+    "start": "node server.js",
+    "start:frontend": "serve -s dist -l 5000",
+    "dev:server": "nodemon server.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "test:production": "node scripts/production-test.cjs",
+    "test:build": "npm run build && node scripts/production-test.cjs",
+    "test:security": "npm audit && node scripts/production-test.cjs",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:prod": "NODE_ENV=production eslint .",
     "env:check": "node scripts/check-environment.js",
-    "env:validate": "node scripts/validate-environment.js",
+    "env:validate": "node scripts/validate-environment.cjs",
+    "env:generate": "node scripts/validate-environment.cjs --generate",
+    "env:summary": "node scripts/validate-environment.cjs --summary",
+    "railway:deploy": "node scripts/railway-deploy.cjs",
+    "railway:login": "railway login",
+    "railway:status": "railway status",
+    "railway:logs": "railway logs",
+    "railway:domain": "railway domain",
+    "railway:variables": "railway variables",
     "security:port-check": "powershell -ExecutionPolicy Bypass -File scripts/port-security-check.ps1",
     "security:port-watch": "powershell -ExecutionPolicy Bypass -File scripts/port-security-check.ps1 -watch",
     "docker:build": "node scripts/docker-manager.js build",
@@ -39,14 +52,24 @@
     "docker:down": "node scripts/docker-manager.js down"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "pg": "^8.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
-    "serve": "^14.2.1"
+    "serve": "^14.2.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.8.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
