Production deployment ready: Fixed critical issues, added Railway config, security improvements

--- a/.env.production
+++ b/.env.production
@@ -12,12 +12,8 @@ VITE_APP_DEBUG="false"
 PORT="3000"
 
 # API Configuration (Railway deployment)
-VITE_API_BASE_URL="$RAILWAY_STATIC_URL/api/v1"
-VITE_API_TIMEOUT="15000"
-VITE_API_RETRY_ATTEMPTS="2"
-
-# API Configuration (Production)
-VITE_API_BASE_URL="$RAILWAY_STATIC_URL/api"
+# Railway otomatik olarak RAILWAY_PUBLIC_DOMAIN sağlar
+VITE_API_BASE_URL="https://$RAILWAY_PUBLIC_DOMAIN/api"
 VITE_API_TIMEOUT="15000"
 VITE_API_RETRY_ATTEMPTS="2"
 
