--- a/.env.production
+++ b/.env.production
@@ -13,7 +13,7 @@ PORT="3000"
 
 # API Configuration (Railway deployment)
 # Railway otomatik olarak RAILWAY_PUBLIC_DOMAIN sağlar
-VITE_API_BASE_URL="https://$RAILWAY_PUBLIC_DOMAIN/api"
+VITE_API_BASE_URL="https://kirilmazlar.up.railway.app/api"
 VITE_API_TIMEOUT="15000"
 VITE_API_RETRY_ATTEMPTS="2"
 
