Deploy hazırlığı: Layout düzeltmeleri ve yeni özellikler

--- a/.env.production
+++ b/.env.production
@@ -33,8 +33,18 @@ VITE_ENABLE_CSP="true"
 VITE_ENABLE_HTTPS="true"
 VITE_SESSION_TIMEOUT="1800000"
 
-# Storage Configuration (Production secured)
-VITE_STORAGE_TYPE="localStorage"
+# PostgreSQL Database Configuration
+DATABASE_URL=postgresql://postgres:QnyvOXoPAyGslhopdUKwFgtXBeSVHqZl@postgres-o7ci.railway.internal:5432/railway
+DATABASE_PUBLIC_URL=postgresql://postgres:QnyvOXoPAyGslhopdUKwFgtXBeSVHqZl@shortline.proxy.rlwy.net:29704/railway
+PGDATABASE=railway
+PGUSER=postgres
+PGPASSWORD=QnyvOXoPAyGslhopdUKwFgtXBeSVHqZl
+PGHOST=shortline.proxy.rlwy.net
+PGPORT=29704
+JWT_SECRET="kirilmazlar-super-secret-jwt-key-2024"
+
+# Storage Configuration (Production secured - PostgreSQL)
+VITE_STORAGE_TYPE="postgresql"
 VITE_STORAGE_PREFIX="kirilmazlar_"
 VITE_STORAGE_ENCRYPT="true"
 
