--- a/.env
+++ b/.env
@@ -2,4 +2,8 @@
 VITE_APP_NAME="KIRILMAZLAR"
 VITE_APP_VERSION="1.0.0"
 
+# Database Configuration
+DATABASE_URL="postgresql://postgres:password@localhost:5432/kirilmazlar"
+JWT_SECRET="kirilmazlar-secret-key-2024"
+
 # Geliştirme modunda yerel storage kullanılıyor
