--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "vite build --mode production",
     "build:staging": "vite build --mode staging",
     "build:dev": "vite build --mode development",
-    "analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
+    "analyze": "ANALYZE=true npm run build",
     "serve": "vite preview --port 5000 --strictPort",
     "serve:staging": "vite preview --port 5000 --strictPort",
     "preview": "serve -s dist -l 5000",
@@ -49,25 +49,35 @@
     "docker:cleanup": "node scripts/docker-manager.js cleanup",
     "docker:up": "node scripts/docker-manager.js up",
     "docker:up:dev": "node scripts/docker-manager.js up:dev",
-    "docker:down": "node scripts/docker-manager.js down"
+    "docker:down": "node scripts/docker-manager.js down",
+    "migrate": "node scripts/migrate.js",
+    "migrate:backup": "node scripts/migrate.js backup",
+    "migrate:restore": "node scripts/migrate.js restore",
+    "migrate:verify": "node scripts/migrate.js verify",
+    "migrate:status": "node scripts/migrate.js status",
+    "build:analyze": "npm run analyze",
+    "perf:monitor": "node scripts/performanceMonitor.js",
+    "perf:test": "npm run build && npm run preview",
+    "optimize": "npm run build:analyze && npm run perf:monitor"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
-    "pg": "^8.11.3",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
-    "serve": "^14.2.1",
-    "socket.io": "^4.7.4",
+    "serve": "^10.0.2",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "ws": "^8.16.0"
   },
@@ -87,6 +97,7 @@
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^26.1.0",
     "postcss": "^8.4.27",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.3.3",
     "terser": "^5.43.1",
     "typescript": "^5.6.3",
