--- a/railway.toml
+++ b/railway.toml
@@ -13,5 +13,6 @@ variables = {
   NODE_ENV = "production",
   PORT = "3001",
   VITE_STORAGE_TYPE = "api",
-  VITE_API_BASE_URL = "https://$RAILWAY_PUBLIC_DOMAIN/api"
+  VITE_API_BASE_URL = "https://$RAILWAY_PUBLIC_DOMAIN/api",
+  DATABASE_URL = "$DATABASE_URL"
 }
