Fix: CSS duplicate imports, login modal localStorage auth, test users added

--- a/.env.development
+++ b/.env.development
@@ -18,6 +18,7 @@ VITE_ENABLE_CONSOLE_LOGS="true"
 VITE_ENABLE_DEVELOPER_TOOLS="true"
 VITE_ENABLE_MOCK_DATA="false"
 VITE_ENABLE_STORAGE_DEBUG="true"
+VITE_USE_API="true"
 
 # Performance Settings
 VITE_ENABLE_SERVICE_WORKER="false"
